<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- КОНТЕНТ ВКЛАДОК (РАСПОЛОЖЕН ВВЕРХУ) -->
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <!-- ВКЛАДКА ВХОД -->
                <FrameLayout
                    android:id="@+id/tabSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        android:layout_marginTop="40dp">

                        <TextView
                            android:text="Вход в систему"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"/>

                        <EditText
                            android:id="@+id/LoginTextView"
                            android:maxLines="1"
                            android:inputType="text"
                            android:hint="@string/loginHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:padding="12dp"
                            android:background="@drawable/back_smoke_round"/>

                        <EditText
                            android:id="@+id/PasswordTextView"
                            android:hint="@string/passwordHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:layout_marginBottom="32dp"
                            android:padding="12dp"
                            android:background="@drawable/back_smoke_round"/>

                        <Button
                            android:onClick="SignIn"
                            android:paddingLeft="40dp"
                            android:paddingRight="40dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:text="@string/goSignIn"
                            android:layout_gravity="center"
                            android:background="@drawable/back_round_smoke"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                    </LinearLayout>
                </FrameLayout>

                <!-- ВКЛАДКА РЕГИСТРАЦИИ -->
                <FrameLayout
                    android:id="@+id/tabSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:text="Регистрация"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"/>

                        <EditText
                            android:id="@+id/NewLoginTextView"
                            android:maxLines="1"
                            android:inputType="text"
                            android:hint="@string/loginHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:padding="12dp"
                            android:background="@drawable/back_smoke_round"/>

                        <EditText
                            android:id="@+id/NewPasswordTextView"
                            android:hint="@string/passwordHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:layout_marginBottom="12dp"
                            android:padding="12dp"
                            android:background="@drawable/back_smoke_round"/>

                        <EditText
                            android:id="@+id/NewNameTextView"
                            android:maxLines="1"
                            android:inputType="text"
                            android:hint="@string/nameHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:padding="12dp"
                            android:background="@drawable/back_smoke_round"/>

                        <EditText
                            android:id="@+id/NewAgeTextView"
                            android:maxLines="1"
                            android:inputType="number"
                            android:hint="@string/ageHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:padding="12dp"
                            android:background="@drawable/back_smoke_round"/>

                        <EditText
                            android:id="@+id/NewStateTextView"
                            android:maxLines="1"
                            android:hint="@string/stateHint"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="32dp"
                            android:padding="12dp"
                            android:background="@drawable/back_smoke_round"/>

                        <Button
                            android:onClick="SignUp"
                            android:paddingLeft="40dp"
                            android:paddingRight="40dp"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:text="@string/goSignUp"
                            android:layout_gravity="center"
                            android:background="@drawable/back_round_smoke"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                    </LinearLayout>
                </FrameLayout>

            </FrameLayout>

            <!-- ВКЛАДКИ (РАСПОЛОЖЕНЫ ВНИЗУ) -->
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#F5F5F5"/>

        </LinearLayout>
    </TabHost>
</FrameLayout>